--- a/Especialidades.html
+++ b/Especialidades.html
@@ -89,7 +89,7 @@ uhOf23Q9Ifjh" crossorigin="anonymous">
                 <h2 align="center">Higiene Bucal</h2>  
                 <table width=90% align=center border=3>          
                 <tr>     
-                        <td><img src="hig1.jpeg" WIDTH="100%"></td>        
+                        <td><img src="img/hig1.jpeg" WIDTH="100%"></td>        
                         <td><img src="hig2.png" width="100%"></td>           
                         <td><img src="hig3.jpeg" WIDTH="100%"></td>        
                         <td><img src="hig4.jpeg" width="100%"></td>   
